* verification policy result update * updated workflow java version